Added sample profile

--- a/about.html
+++ b/about.html
@@ -27,10 +27,13 @@
       <h2>About Us</h2>
       The Whitney Young Girls Who Code Club was co-founded in 2015 to continue providing a friendly environment to encourage girls to learn how to code. We have awesome mentors and members!
       
-
+      <h3>Sample</h3>
+      <p>Hi! This is a sample bio</p>
+      <a href="sample.html">Sample Profile</a>
+      
       <h3>Vivian Auduong</h3>
       <p>Hi! I'm one of the co-presidents of the Girls Who Code Club. I like talking to people and learning new things! I make a lot of mistakes.</p>
-
+      <a href="vivian.html">Vivian's Sample Profile</a>
       <h3>Annabelle Lee</h3>
       <p>Hey there! My name is Annabelle Lee and I'm a senior at Whitney Young. I co-lead the Whitney Young Girls Who Code club and am interested in math, computer science, and sloths!</p>
     </div>
