--- a/profiles/Lauren-Stanciel.html
+++ b/profiles/Lauren-Stanciel.html
@@ -3,4 +3,7 @@
 <head>
 <title> Profile: Lauren Stanciel</title>
 </head>
+  <body>
+My name is Lauren Stanciel. I am a junior at Whitney Young and member of the WY Girls Who Code club.
+  </body>  
 </html>
