--- a/about.html
+++ b/about.html
@@ -29,11 +29,11 @@
       
       <h3>Sample</h3>
       <p>Hi! This is a sample bio</p>
-      <a href="sample.html">Sample Profile</a>
+      <a href="profiles/sample.html">Sample Profile</a>
       
       <h3>Vivian Auduong</h3>
       <p>Hi! I'm one of the co-presidents of the Girls Who Code Club. I like talking to people and learning new things! I make a lot of mistakes.</p>
-      <a href="vivian.html">Vivian's Sample Profile</a>
+      <a href="profiles/vivian.html">Vivian's Sample Profile</a>
       <h3>Annabelle Lee</h3>
       <p>Hey there! My name is Annabelle Lee and I'm a senior at Whitney Young. I co-lead the Whitney Young Girls Who Code club and am interested in math, computer science, and sloths!</p>
     </div>
