--- a/about.html
+++ b/about.html
@@ -37,6 +37,14 @@
       <h3>Annabelle Lee</h3>
       <p>Hey there! My name is Annabelle Lee and I'm a senior at Whitney Young. I co-lead the Whitney Young Girls Who Code club and am interested in math, computer science, and sloths!</p>
     </div>
+    
+    <div class ="content">
+      <h2>Instructors</h2>
+      Here are the awesome people that help make this club the coolest.
+      
+      <h3>Lindsay Abney</h3>
+      <a href="profiles/Abney_Profile">Profile</a>
+    </div>
 
   </body>
 </html>
