--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       Here are the awesome people that help make this club the coolest.
       
       <h3>Lindsay Abney</h3>
-      <a href="profiles/Abney_Profile">Profile</a>
+      <a href="profiles/Abney_Profile.html">Profile</a>
     </div>
 
   </body>
