--- a/about.html
+++ b/about.html
@@ -44,6 +44,8 @@
       
       <h3>Lindsay Abney</h3>
       <a href="profiles/Abney_Profile.html">Profile</a>
+      <h3>Cristina Schlesier</h3>
+      <a href="profiles/cristina.html">Profile</a>
     </div>
 
   </body>
