--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -14,10 +14,10 @@
 
     	<div class="navBar">
     		<ul>
-      		<li><a href="index.html">Home</a></li>
-     	 		<li><a href="news.html">News</a></li>
-      		<li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li>
+      		<li><a href="../index.html">Home</a></li>
+     	 		<li><a href="../news.html">News</a></li>
+      		<li><a href="../contact.html">Contact</a></li>
+          <li><a href="../about.html">About Us</a></li>
     		</ul>
     	</div>
 
