--- a/profiles/cristina.html
+++ b/profiles/cristina.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="resources\css\style.css">
+    <link rel="stylesheet" type="text/css" href="..\css\style.css">
     <title>Girls Who Code Website</title>
   </head>
 
