--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -25,7 +25,7 @@
 
     <div class ="content">
      <h2>Lindsay Abney</h2>
-      <img src="../resources/images/Abney Family Crest sketch v03.jpg">
+      <img src="../resources/images/Abney Family Crest sketch v03.jpg" style="width:128px;height:128px;">
     </div>
 
   </body>
