--- a/profiles/sample.html
+++ b/profiles/sample.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style\sample.css">
+    <title>Girls Who Code Website</title>
+  </head>
 
+  <body>
+    <div class="header">
+
+      <h1>Whitney Young Girls Who Code</h1>
+
+    	<div class="navBar">
+    		<ul>
+      		<li><a href="wygirlswhocode.github.io/index.html">Home</a></li>
+     	 		<li><a href="wygirlswhocode.github.io/news.html">News</a></li>
+      		<li><a href="wygirlswhocode.github.io/contact.html">Contact</a></li>
+          <li><a href="wygirlswhocode.github.io/about.html">About Us</a></li>
+    		</ul>
+    	</div>
+
+    </div>
+
+    <div class ="content">
+      <h3>About Me</h3>
+      <p><b>Superpower:</b></p>
+      <p><b>Weakness:</b></p>
+      <p><b>Memes:</b></p>
+      
+    </div>
+
+  </body>
+</html>
