--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     	</div>
 
     </div>
-    <div class="content">
+    <div class="content" align="center">
       <iframe src="https://calendar.google.com/calendar/embed?src=wygirlswhocode%40gmail.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       <h2>We meet every Monday after school in room 277!</h2>
       <p>Join us!</p>
