--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
 	<head>
-		<title> Chihuahuas </title>
+		<title> chihuahuas </title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	</head>
