--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -4,6 +4,7 @@
 		<title> chihuahuas </title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
 	</head>
 	
 
@@ -27,7 +28,7 @@ div.titleBox {
 
 h1 {
     color: black;
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Barrio', cursive;
 	font-size: 140px;
 	padding-top: 20px;
 	margin-bottom: 80px;
