--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -25,7 +25,8 @@
 
     <div class ="content">
      <h2>Lindsay Abney</h2>
-      <img src="../resources/images/Abney Family Crest sketch v03.jpg" style="width:308px;height:460px;">
+      <div style="text-align: center"> <img src="../resources/images/Abney Family Crest sketch v03.jpg" style="width:308px;height:460px;">
+      </div>
     </div>
 
   </body>
