--- a/profiles/vivian.html
+++ b/profiles/vivian.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="..\resources\css\style.css">
+   
     <title>Girls Who Code Website</title>
   </head>
 
@@ -27,6 +26,8 @@
       <p><b>Superpower:</b> Failing a lot and feeling okay about it</p>
       <p><b>Weakness:</b> Allergies</p>
       <p><b>Memes:</b> </p>
+      
+      <iframe src="https://trinket.io/embed/python/0ab5a80f62" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
       
     </div>
 
