--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -11,7 +11,7 @@
 <style>
 body {
 	background-color: purple;
-    color: white;
+    	color: white;
 	font-family: 'Slabo 27px', serif;
 	font-size: 5px;
 	margin: 0px;
@@ -28,8 +28,8 @@ div.titleBox {
 
 h1 {
     color: black;
-	font-family: 'Barrio', cursive;
-	font-size: 140px;
+	font: 140px 'Barrio', cursive;
+	color: #e868df;
 	padding-top: 20px;
 	margin-bottom: 80px;
 }
