--- a/profiles/cristina.html
+++ b/profiles/cristina.html
@@ -27,7 +27,8 @@
       <h2>Cristina Schlesier</h2>
       
       About me: I'm a graduate student in particle physics at UIUC. I work on the <a href="http://muon-g-2.fnal.gov/">Muon g-2 Experiment at Fermilab.</a>      
-      
+      <p>
+        <iframe src="https://trinket.io/embed/python/3133699dbf?runOption=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     </div>
 
   </body>
