Added css sheet

--- a/profiles/vivian.html
+++ b/profiles/vivian.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-   
+    <link rel="stylesheet" type="text/css" href="style\vivian.css">
     <title>Girls Who Code Website</title>
   </head>
 
