--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -78,7 +78,7 @@ a:clicked {
 
 
 div.infoBox {
-	background-color: black;
+	background-color: #2b0082;
 	font-size: 25px;
 	top:700px;
 	height: 750px;
