--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -25,8 +25,11 @@
 
     <div class ="content">
      <h2>Lindsay Abney</h2>
+      p.ex1 { font: 15px arial, sans-serif;}
       <div style="text-align: center"> <img src="../resources/images/Abney Family Crest sketch v03.jpg" style="width:308px;height:460px;">
       </div>
+      <p class="ex1">This is a paragraph. This is a paragraph.
+        This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
       <div style="text-align: center"> <img src="http://cdn2.sportngin.com/attachments/news_article/6827/8505/girlswhocodegwc-logo.png">
       </div>
     </div>
