--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -2,9 +2,8 @@
 <html>
 	<head>
 		<title> chihuahuas </title>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 	</head>
 	
 
@@ -46,7 +45,7 @@ a {
 	position: absolute;
 	text-decoration: none;
 	
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Sigmar One', cursive;
 	font-size: 30px;
 	font-weight: bold;
 }
