--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -5,6 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="..\resources\css\style.css">
     <title>Girls Who Code Website</title>
+    <style>
+        p.ex1 {font: 15px arial, sans-serif;}
+    </style>
   </head>
 
   <body>
