--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> chihuahuas </title>
 		<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
 	</head>
 	
 
@@ -45,7 +45,7 @@ a {
 	position: absolute;
 	text-decoration: none;
 	
-	font-family: 'Sigmar One', cursive;
+	font-family: 'Julius Sans One', sans-serif;
 	font-size: 30px;
 	font-weight: bold;
 }
