--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -7,6 +7,7 @@
     <title>Girls Who Code Website</title>
     <style>
         p.ex1 {font: 15px arial, sans-serif;}
+        p.ex2 {font: 15px bold arial, sans-serif;}
     </style>
   </head>
 
@@ -30,8 +31,7 @@
      <h2>Lindsay Abney</h2>
       <div style="text-align: center"> <img src="../resources/images/Abney Family Crest sketch v03.jpg" style="width:308px;height:460px;">
       </div>
-      <p class="ex1">This is a paragraph. This is a paragraph.
-        This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+      <p class="ex2">Profession: </p> <p class="ex1">Accenture Senior Manager- Technology Consultant.</p>
       <div style="text-align: center"> <img src="http://cdn2.sportngin.com/attachments/news_article/6827/8505/girlswhocodegwc-logo.png">
       </div>
     </div>
