--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> chihuahuas </title>
 		<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Gafata" rel="stylesheet">
 	</head>
 	
 
@@ -45,7 +45,7 @@ a {
 	position: absolute;
 	text-decoration: none;
 	
-	font-family:  'Playfair Display', serif;
+	font-family: 'Gafata', sans-serif;
 	font-size: 25px;
 	font-weight: bold;
 }
