--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -7,7 +7,7 @@
     <title>Girls Who Code Website</title>
     <style>
         p.ex1 {font: 15px arial, sans-serif;}
-        p.ex2 {font: 15px bold arial, sans-serif;}
+        p.ex2 {font: bold 15px  arial, sans-serif;}
     </style>
   </head>
 
