--- a/profiles/Abney_Profile.html
+++ b/profiles/Abney_Profile.html
@@ -31,7 +31,7 @@
      <h2>Lindsay Abney</h2>
       <div style="text-align: center"> <img src="../resources/images/Abney Family Crest sketch v03.jpg" style="width:308px;height:460px;">
       </div>
-      <p class="ex2">Profession: </p> <p class="ex1">Accenture Senior Manager- Technology Consultant.</p>
+      <p class="ex2">Profession: Accenture Senior Manager- Technology Consultant.</p>
       <div style="text-align: center"> <img src="http://cdn2.sportngin.com/attachments/news_article/6827/8505/girlswhocodegwc-logo.png">
       </div>
     </div>
