--- a/news.html
+++ b/news.html
@@ -24,11 +24,15 @@
     </div>
 
     <div class ="content">
-      <h2>Club Photos on Wednesday, February 8th during 5th Period!</h2>
-      <p>Club photos for GWC will take place Wednesday, Feb 8th during 5th period in Green House. *Please note they will NOT be on Feb 7th as listed on the posters in the building. Spread the word about this change! Wear your shirts if you have them!</p>
+      <h2>9-12th grade: Rose-Hulman SPARK engineering Competition (Saturday 3/18, 8AM-4PM)</h2>
+      <p>A 4-person team of Rose-Hulman college students and high schoolers will be challenged to develop a creative solution to a robotics design challenge announced the day of the event. The competition is loads of fun, free of charge and all materials are provided. More importantly, there will be great food and incredible prizes (cash, ipads and more).
+Register by March 11th: http://tinyurl.com/RH-SPARK
+Contact Dr. Mauer-Oats for more information. *If interested, talk to Doc MO ASAP!</p>
 
-      <h2>Cool Codeday Opportunity! (2/18-2/19)</h2>
-      <p>Codeday is an overnight hackathon with awards where you learn to code games and apps. No experience is necessary! There is a small fee of $10, but that includes food for the 24 hours! It sounds like a lot of fun and will take place 2/18 - 2/19 at the Blue 1647 Innovation Center. More info: https://codeday.org/chicago</p>
+      <h2>6-9th grade: Tech-Savvy workshop (Saturday 3/25, 9am-3pm) </h2>
+      <p> http://www.aauw.org/what-we-do/stem-education/tech-savvy/
+Tech Savvy is a daylong science, technology, engineering, and math (STEM) career conference designed to attract girls in sixth–ninth grade to these fields and to inform families about STEM education and careers.
+There is a fee of $10 to cover the cost of lunch and t-shirt, if interested please register at the link above. Spots are first come first serve.</p>
 
       <h2>Raspberry Pi Challenge 2017!</h2>
       <p>Finally, we'd love to get a team together again for the 2017 Raspberry Pi Challenge! We have to make an initial video by Feb 15 with an idea, so talk to Vivian if you'd like to participate or have an idea! More info: http://www.illinoistechlex.org/RPstudentindex.html</p>
