Fixed links to absolute links

--- a/profiles/vivian.html
+++ b/profiles/vivian.html
@@ -14,10 +14,10 @@
       
       <nav class="w3-sidenav" style="width:25%">
        <br>
-        <a href="wygirlswhocode.github.io/index.html">Home</a>
-        <a href="wygirlswhocode.github.io/news.html">News</a>
-        <a href="wygirlswhocode.github.io/contact.html">Contact</a>
-        <a href="wygirlswhocode.github.io/about.html">About Us</a>
+        <a href="https://wygirlswhocode.github.io/index.html">Home</a>
+        <a href="https://wygirlswhocode.github.io/news.html">News</a>
+        <a href="https://wygirlswhocode.github.io/contact.html">Contact</a>
+        <a href="https://wygirlswhocode.github.io/about.html">About Us</a>
       </nav>
 
     	
