Fixed sample.html to use absolute links

--- a/profiles/sample.html
+++ b/profiles/sample.html
@@ -13,10 +13,10 @@
 
     	<div class="navBar">
     		<ul>
-      		<li><a href="wygirlswhocode.github.io/index.html">Home</a></li>
-     	 		<li><a href="wygirlswhocode.github.io/news.html">News</a></li>
-      		<li><a href="wygirlswhocode.github.io/contact.html">Contact</a></li>
-          <li><a href="wygirlswhocode.github.io/about.html">About Us</a></li>
+      		<li><a href="https://wygirlswhocode.github.io/index.html">Home</a></li>
+     	 		<li><a href="https://wygirlswhocode.github.io/news.html">News</a></li>
+      		<li><a href="https://wygirlswhocode.github.io/contact.html">Contact</a></li>
+          <li><a href="https://wygirlswhocode.github.io/about.html">About Us</a></li>
     		</ul>
     	</div>
 
