--- a/profiles/Tinuola.html
+++ b/profiles/Tinuola.html
@@ -6,7 +6,7 @@
 <p>
 
  <audio controls>
-  <source src="https://github.com/wygirlswhocode/wygirlswhocode.github.io/blob/master/resources/Coloring.mp3" type="audio/mpeg">
+  <source src="../resources/coloring.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
