Add Twilight Sparkle gif

--- a/profiles/vivian.html
+++ b/profiles/vivian.html
@@ -30,6 +30,7 @@
           <p><b>Superpower:</b> Failing a lot and feeling okay about it</p>
           <p><b>Weakness:</b> Allergies</p>
           <p><b>Memes:</b> </p>
+          <iframe src="//giphy.com/embed/GCukKyf32k9B6" width="480" height="404" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/my-little-pony-happy-excited-GCukKyf32k9B6">via GIPHY</a></p>
           <iframe src="//giphy.com/embed/lXiRKeGZeOyEpRHkk" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/cheezburger-haters-pony-lXiRKeGZeOyEpRHkk">via GIPHY</a></p>
           <iframe src="//giphy.com/embed/zMYX4qPxfCzJK" width="480" height="309" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/sad-kim-kardashian-zMYX4qPxfCzJK">via GIPHY</a></p>
           <iframe src="https://trinket.io/embed/python/0ab5a80f62" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
