Add snoopy cat gif

--- a/profiles/vivian.html
+++ b/profiles/vivian.html
@@ -30,6 +30,7 @@
           <p><b>Superpower:</b> Failing a lot and feeling okay about it</p>
           <p><b>Weakness:</b> Allergies</p>
           <p><b>Memes:</b> </p>
+          <iframe src="//giphy.com/embed/9Ye0oP4znAuFG" width="480" height="333" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/cat-snoopy-9Ye0oP4znAuFG">via GIPHY</a></p>
           <iframe src="//giphy.com/embed/LehTTThMSj4Pe" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/dog-art-design-chair-LehTTThMSj4Pe">via GIPHY</a></p>
           <iframe src="//giphy.com/embed/GCukKyf32k9B6" width="480" height="404" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/my-little-pony-happy-excited-GCukKyf32k9B6">via GIPHY</a></p>
           <iframe src="//giphy.com/embed/lXiRKeGZeOyEpRHkk" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/cheezburger-haters-pony-lXiRKeGZeOyEpRHkk">via GIPHY</a></p>
