Named side div class="side"

--- a/profiles/vivian.html
+++ b/profiles/vivian.html
@@ -25,7 +25,7 @@
    
 
   
-    <div style="margin-left:25%">
+    <div class="side" style="margin-left:25%">
          <h3>About Vivian</h3>
           <h2>Real picture of me:</h2>
           <iframe src="//giphy.com/embed/o0vwzuFwCGAFO" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/cat-hacker-webs-o0vwzuFwCGAFO">via GIPHY</a></p>
