--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -3,7 +3,7 @@
 
   <head>
     <title> chihuahuas </title>
-    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rochester" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gafata" rel="stylesheet">
   </head>
 
@@ -25,7 +25,7 @@
     }
     h1 {
         color: black;
-    	font: 140px 'Barrio', cursive;
+    	font: 140px 'Rochester', cursive;
     	color: #e868df;
     	padding-top: 20px;
     	margin-bottom: 80px;
