--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -17,7 +17,7 @@
     	margin: 0px;
     }
     div.firstBox {
-        background-image: url(https://secure.static.tumblr.com/10d522a0bb53712f0382001dd217c33a/usxystt/GVjn46doy/tumblr_static_tumblr_inline_mlky4axzbo1r53miq.png);
+        background-image: url(https://s-media-cache-ak0.pinimg.com/originals/89/2d/0e/892d0e2871adffb78172d7ce21ec9950.jpg);
         color: white;
 
     	height: 900px;
