--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -18,7 +18,7 @@
     	height: 50px;
     	width: 50px;
     }
-    #facebook {
+    #github {
     	top: 20px;
     }
     #twitter {
@@ -30,7 +30,7 @@
     #tumblr { 
     	top: 230px;
     }
-    #pinterest {
+    #facebook {
     	top: 300px;
     }
     #dots {
@@ -117,12 +117,12 @@
 
   <body>
     <div class="media">
-      <a href="https://facebook.com" target="_blank" id="facebook"><img src="face.png" id="media2"></a>
-      <a href="https://twitter.com" target="_blank" id="twitter"><img src="twitter.png" id="media2"></a>
-      <a href="https://instagram.com" target="_blank" id="insta"><img src="insta.png" id="media2"></a>
-      <a href="https://tumblr.com" target="_blank" id="tumblr"><img src="tumblr.png" id="media2"></a>
-      <a href="https://pinterest.com" target="_blank" id="pinterest"><img src="pinterest.png" id="media2"></a>
-      <a href="https://google.com" target="_blank" id="dots"><img src="dots.png" id="media2"></a>
+      <a href="https://google.com" target="_blank" id="dots"><img src="https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697058-flickr-128.png" id="media2"></a>
+      <a href="https://facebook.com" target="_blank" id="facebook"><img src="https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697057-facebook-128.png" id="media2"></a>
+      <a href="https://twitter.com" target="_blank" id="twitter"><img src="https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697029-twitter-128.png" id="media2"></a>
+      <a href="https://instagram.com" target="_blank" id="insta"><img src="https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697067-instagram-128.png" id="media2"></a>
+      <a href="https://tumblr.com" target="_blank" id="tumblr"><img src="https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697027-tumblr-128.png" id="media2"></a>
+      <a href="https://github.com" target="_blank" id="github"><img src="https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697061-github-128.png" id="media2"></a>
     </div>
 
 
