--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -138,7 +138,7 @@ div.cutePicture {
   <a href = 'https://github.com/wygirlswhocode/wygirlswhocode.github.io/blob/master/profiles/paola.html'    target = '_blank' id = 'github'>   <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697061-github-128.png'    id = 'mediaBubbleSize'></a>
   <a href = 'https://facebook.com'  target = '_blank' id = 'facebook'> <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697057-facebook-128.png'  id = 'mediaBubbleSize'></a>
   <a href = 'https://instagram.com' target = '_blank' id = 'insta'>    <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697067-instagram-128.png' id = 'mediaBubbleSize'></a>
-  <a href = 'https://tumblr.com'    target = '_blank' id = 'tumblr'>   <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697027-tumblr-128.png'    id = 'mediaBubbleSize'></a>
+  <a href = 'https://wygirlswhocode.github.io/profiles/paola.html'    target = '_blank' id = 'tumblr'>   <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697027-tumblr-128.png'    id = 'mediaBubbleSize'></a>
   <a href = 'https://twitter.com'   target = '_blank' id = 'twitter'>  <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697029-twitter-128.png'   id = 'mediaBubbleSize'></a>
   <a href = 'https://wygirlswhocode.github.io'    target = '_blank' id = 'dots'>     <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697058-flickr-128.png'    id = 'mediaBubbleSize'></a>
 </div>
