--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -2,7 +2,7 @@
   <head>
     <title> chihuahuas </title>
     <link href = 'profileStyle.css' rel = 'stylesheet'>
-    <link href = 'https://fonts.googleapis.com/css?family=Cabin+Sketch|Cinzel+Decorative' rel = 'stylesheet'> <!-- Title -->
+    <link href = 'https://fonts.googleapis.com/css?family=Cabin+Sketch|Cinzel+Decorative' rel="stylesheet"> <!-- Title -->
     <link href = 'https://fonts.googleapis.com/css?family=Gafata' rel = 'stylesheet'> <!-- Tabs -->
   </head>
 
@@ -63,21 +63,24 @@ div.firstBox {
     	color: #6b675e; /* coral white i guess */
 
     	padding-top: 40px;
-    	margin-bottom: 100px;
+    	margin-bottom: 90px;
+    }
+
+    #dogAndDolphins {
+      width: 35%;
     }
 
 
     div.tabs {
     	height: 50px;
-    	margin-bottom: 50px;
+    	margin-bottom: 105px;
     }
       a {
         color: black;
     	  position: absolute;
         text-decoration: none;
 
-        font: 30px 'Gafata', sans-serif;
-    	  font-decoration: underline;
+        font-size: 30px; /* 'Gafata', sans-serif */;
         text-decoration: underline;
       }
       a:hover {
@@ -127,6 +130,7 @@ div.cutePicture {
   	width: 100%;
   	height: 100%;
 }
+
 </style>
 
  
@@ -151,17 +155,16 @@ div.cutePicture {
   </center>
   <!-- Div box for formatting the tabs -->
   <div class = 'tabs'>
-    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/html.html'            target = '_blank' id = 'homeButton'>      HOME      </a>
-    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/Avatar/avatar.html'   target = '_blank' id = 'aboutButton'>     ABOUT     </a>
-    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/gallery/gallery.html' target = '_blank' id = 'updatesButton'>   UPDATES   </a>
-    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/website/website.html' target = '_blank' id = 'resourcesButton'> RESOURCES </a>
-    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/disney/Disney2.html'  target = '_blank' id = 'contactButton'>   CONTACT   </a>
+    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/html.html'            target = '_blank' id = 'homeButton'>      Home      </a>
+    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/Avatar/avatar.html'   target = '_blank' id = 'aboutButton'>     About     </a>
+    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/gallery/gallery.html' target = '_blank' id = 'updatesButton'>   Updates   </a>
+    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/website/website.html' target = '_blank' id = 'resourcesButton'> Resources </a>
+    <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/disney/Disney2.html'  target = '_blank' id = 'contactButton'>   Contact   </a>
   </div>
-  <!-- "picture maybe" part of Title Box™
+  <!-- "picture maybe" part of Title Box™ -->
   <center>
-    <img src = 'http://ichef.bbci.co.uk/news/660/cpsprodpb/169F6/production/_91026629_gettyimages-519508400.jpg' width = 852px height = 431px>
+    <img src = 'https://s-media-cache-ak0.pinimg.com/originals/84/fd/18/84fd18b0db1668757a2221755ddf08aa.png' id = 'dogAndDolphins'>
   </center>
-  --->
 </div>
 
 
