--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -171,7 +171,15 @@ div.cutePicture {
 <!-- Lorem Ipsum text INFO div -->
 <div class = 'loremIpsum'>
   <p id = 'loremText'> 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-</div>
+  
+   <p> Personality Type (16Personalities): <a href = 'https://www.16personalities.com/infp-personality'> Moderator </a> 
+     
+   <p> Sign: Aries 
+     
+   <p> Weaknesses:
+    <p> Bad: Spoiled Milk
+    <p> Good: Cannolis, Horchata
+  </div>
 
 <!-- cute image div -->
 <div class = 'cutePicture'></div>
