--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -2,18 +2,18 @@
   <head>
     <title> chihuahuas </title>
     <link href = 'profileStyle.css' rel = 'stylesheet'>
-    <link href = 'https://fonts.googleapis.com/css?family=Cabin+Sketch|Cinzel+Decorative' rel="stylesheet"> <!-- Title -->
+    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet"> <!-- Title -->
     <link href = 'https://fonts.googleapis.com/css?family=Gafata' rel = 'stylesheet'> <!-- Tabs -->
   </head>
 
-  
+
 <style>
   
 body {
-    	background-color: green;
+    	background-color: pink;
       font-family: 5px 'Slabo 27px', serif;
       color: white;
-    	margin: 0px;
+      margin: 0px;
 }
 
 
@@ -59,7 +59,7 @@ div.firstBox {
     #title {
     /* FONT OPTION 1: 'Cabin Sketch', cursive; */
     /* FONT OPTION 2:'Cinzel Decorative', cursive; */
-    	font: 130px 'Cinzel Decorative', cursive;
+    	font: 130px 'Barrio', cursive;
     	color: #6b675e; /* coral white i guess */
 
     	padding-top: 40px;
@@ -68,6 +68,9 @@ div.firstBox {
 
     #dogAndDolphins {
       width: 25%;
+
+      position: relative;
+      top: 50px;
     }
 
 
@@ -130,13 +133,11 @@ div.cutePicture {
   	width: 100%;
   	height: 100%;
 }
-
 </style>
 
- 
 <body>
 
-<!-- div box for FLOAT position of social media bubbles on the side -->
+<!-- div box for FLOAT of social media bubbles on the side -->
 <div class = 'socialMedia'>
   <!-- mediaBubbleSize is to control SIZE of all icons -->
   <a href = 'https://github.com/wygirlswhocode/wygirlswhocode.github.io/blob/master/profiles/paola.html'    target = '_blank' id = 'github'>   <img src = 'https://cdn1.iconfinder.com/data/icons/iconza-circle-social/64/697061-github-128.png'    id = 'mediaBubbleSize'></a>
@@ -148,11 +149,12 @@ div.cutePicture {
 </div>
 
 
-<!-- PAGE STARTS HERE: Title Box div: has title, tabs, and a picture maybe -->
+<!-- PAGE STARTS HERE: Title Box div: has title, tabs, and a picture -->
 <div class = 'firstBox'>
   <center>
       <h1 id = 'title'> Paola </h1>
   </center>
+
   <!-- Div box for formatting the tabs -->
   <div class = 'tabs'>
     <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/html.html'            target = '_blank' id = 'homeButton'>      Home      </a>
@@ -161,25 +163,23 @@ div.cutePicture {
     <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/website/website.html' target = '_blank' id = 'resourcesButton'> Resources </a>
     <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/disney/Disney2.html'  target = '_blank' id = 'contactButton'>   Contact   </a>
   </div>
-  <!-- "picture maybe" part of Title Box™ -->
+
+  <!-- picture part of Title Box™ -->
   <center>
     <img src = 'https://s-media-cache-ak0.pinimg.com/originals/84/fd/18/84fd18b0db1668757a2221755ddf08aa.png' id = 'dogAndDolphins'>
   </center>
 </div>
 
 
-<!-- Lorem Ipsum text INFO div -->
+<!-- Lorem Ipsum text / INFO div -->
 <div class = 'loremIpsum'>
   <p id = 'loremText'> 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-  
-   <p> Personality Type (16Personalities): <a href = 'https://www.16personalities.com/infp-personality'> Moderator </a> 
-     
-   <p> Sign: Aries 
-     
-   <p> Weaknesses:
+  <p> Personality Type (16Personalities): <a href = 'https://www.16personalities.com/infp-personality'> Moderator </a>
+  <p> Sign: Aries
+  <p> Weaknesses:
     <p> Bad: Spoiled Milk
     <p> Good: Cannolis, Horchata
-  </div>
+</div>
 
 <!-- cute image div -->
 <div class = 'cutePicture'></div>
