--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -4,6 +4,13 @@
 <title> Profile: Afrika Hooks</title>
 </head>
   <body>
-    <p> My name is Afrika Hooks. I am an 8th grader at Whitney Young and member of the WY Girls Who Code club. </p>
+    <h1> About me </h1>
+    <p> My name is Afrika Hooks. I am an 8th grader at Whitney Young and member of the WY Girls Who Code club. <br>
+        I love coding!!!<br>
+        I want to be a computer engineer/programmer when I grow up.
+    </p>
+    <h2> What I am learning/working on </h2>
+    <p> I am learning Java, Javascript, Python, HTML, and Scratch.<br>
+        I am currently trying to make a platformer in Scratch.<br>
   </body>  
 </html>
