--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -9,6 +9,14 @@
         I love coding!!!<br>
         I want to be a computer engineer/programmer when I grow up.
     </p>
+    <h3> What I like (besides coding) </h3>
+    <p>  Dancing<br>
+         Playing piano<br>
+         Spanish<br>
+         My school<br>
+         My Girls Who Code group<br>
+         Etc.
+    </p>
     <h2> What I am learning/working on </h2>
     <p> I am learning Java, Javascript, Python, HTML, and Scratch.<br>
         I am currently trying to make a platformer in Scratch.<br>
