--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -155,7 +155,7 @@ div.cutePicture {
       <h1 id = 'title'> Paola </h1>
   </center>
 
-  <!-- Div box for formatting the tabs -->
+  <!-- Div box for formatting the tabs 
   <div class = 'tabs'>
     <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/html.html'            target = '_blank' id = 'homeButton'>      Home      </a>
     <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/Avatar/avatar.html'   target = '_blank' id = 'aboutButton'>     About     </a>
@@ -163,6 +163,7 @@ div.cutePicture {
     <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/website/website.html' target = '_blank' id = 'resourcesButton'> Resources </a>
     <a href = 'file:///C:/Users/Jesus/OneDrive/Documents/webs/disney/Disney2.html'  target = '_blank' id = 'contactButton'>   Contact   </a>
   </div>
+-->
 
   <!-- picture part of Title Box™ -->
   <center>
