--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -2,7 +2,7 @@
   <head>
     <title> chihuahuas </title>
     <link href = 'profileStyle.css' rel = 'stylesheet'>
-    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet"> <!-- Title -->
+    <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet"> <!-- Title -->
     <link href = 'https://fonts.googleapis.com/css?family=Gafata' rel = 'stylesheet'> <!-- Tabs -->
   </head>
 
