--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -57,7 +57,7 @@ div.firstBox {
     /* FONT OPTION 3: 'Francois One', sans-serif; */
         /* or any sans-serif font ig idk*/
         font: 130px 'Francois One', sans-serif; 
-        color: #6b675e; /* coral white i guess */
+        color: white; /* coral white i guess */
         padding-top: 40px;
         margin-bottom: 90px;
     }
