--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -2,15 +2,15 @@
   <head>
     <title> chihuahuas </title>
     <link href = 'profileStyle.css' rel = 'stylesheet'>
-    <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet"> <!-- Title -->
-    <link href = 'https://fonts.googleapis.com/css?family=Gafata' rel = 'stylesheet'> <!-- Tabs -->
+    <link href="https://fonts.googleapis.com/css?family=Pattaya" rel="stylesheet"> <!-- Title -->
+ <!--  <link href = 'https://fonts.googleapis.com/css?family=Gafata' rel = 'stylesheet'> <!-- Tabs --> -->
   </head>
 
 
 <style>
   
 body {
-        background-color: pink;
+      background-color: pink;
       font-family: 5px 'Slabo 27px', serif;
       color: white;
       margin: 0px;
@@ -56,7 +56,7 @@ div.firstBox {
     /* FONT OPTION 2: 'Cinzel Decorative', cursive; */
     /* FONT OPTION 3: 'Francois One', sans-serif; */
         /* or any sans-serif font ig idk*/
-        font: 130px 'Francois One', sans-serif; 
+        font: 130px 'Pattaya', sans-serif;
         color: white; /* coral white i guess */
         padding-top: 40px;
         margin-bottom: 90px;
