--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -53,8 +53,7 @@ div.firstBox {
     #title {
     /* FONT OPTION 1: 'Cabin Sketch', cursive; */
     /* FONT OPTION 2: 'Cinzel Decorative', cursive; */
-    /* FONT OPTION 3: 'Francois One', sans-serif; */
-        /* or any sans-serif font ig idk*/
+    /* FONT OPTION 3: 'Pattaya', sans-serif; */
         font: 135px 'Pattaya', sans-serif;
         color: white; /* coral white i guess */
         padding-top: 40px;
