--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -10,8 +10,8 @@
         I want to be a computer engineer/programmer when I grow up.
     </p>
     <h3> What I like (besides coding) </h3>
-    <p>  Dancing<br>
-         Playing piano<br>
+     <a href="All about dance.html">Dancing</a><br>
+     <p> Playing piano<br>
          Spanish<br>
          My school<br>
          My Girls Who Code group<br>
