--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -85,9 +85,7 @@ div.loremIpsum {
 
 div.cutePicture {
       background-image: url("http://s6.favim.com/610/141026/background-chihuahua-dark-dog-Favim.com-2181678.jpg");
-      width: 100%;
-      height: 650px;
-}
+      background-repeat: repeat;
 
 </style>
 
