--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -86,7 +86,7 @@ div.loremIpsum {
 div.cutePicture {
       background-image: url("http://s6.favim.com/610/141026/background-chihuahua-dark-dog-Favim.com-2181678.jpg");
       background-repeat: repeat;
-
+      height: 400px;
 </style>
 
 <body>
