--- a/profiles/Alex.html
+++ b/profiles/Alex.html
@@ -6,7 +6,13 @@
 <body>
   <h1>Alex's Corner</h1>
   <p>Name's Alex. I'm just a small person tooting along here on the internet. I'm quite the nerd, and love to write roleplaying and draw. And code!</a>
-
+<style>
+body {
+        background-image: url("http://cdn.wallpapersafari.com/19/73/aCF5ch.png");
+} 
+ 
+</style>
+ 
 <img src="https://derpicdn.net/img/2014/12/22/790050/full.gif"/></a>
 </body> 
 </html>
