--- a/profiles/Alex.html
+++ b/profiles/Alex.html
@@ -4,7 +4,7 @@
   <title>Alex's Corner</title>
 </head>
 <body>
- <h1 style="#ffffff">This is the header you want to change</h1>
+ <h1 style="color=#ffffff";>This is the header you want to change</h1>
   
   <p>Name's Alex. I'm just a small person tooting along here on the internet. I'm quite the nerd, and love to write roleplaying and draw. And code!</a>
 <style>
