--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title> Profile: Afrika Hooks</title>
+  <style>
+    body {
+      background-color: rgb(255, 26, 255);
+    }
+  </style>
 </head>
   <body>
     <h1> About me </h1>
