--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -15,8 +15,8 @@
         I want to be a computer engineer/programmer when I grow up.
     </p>
     <h3> What I like (besides coding) </h3>
-     <a href="All about dance.html">Dancing</a><br>
-     <p> Playing piano<br>
+     <p> Dancing<br>
+         Playing piano<br>
          Spanish<br>
          My school<br>
          My Girls Who Code group<br>
