--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -25,5 +25,6 @@
     <h2> What I am learning/working on </h2>
     <p> I am learning Java, Javascript, Python, HTML, and Scratch.<br>
         I am currently trying to make a platformer in Scratch.<br>
+      <a href="about.html">Go back</a>
   </body>  
 </html>
