--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -122,6 +122,7 @@ body {
 <div class = 'loremIpsum' id = 'loremText'>
   <p > Personality Type (16Personalities): <a href = 'https://www.16personalities.com/infp-personality'> Moderator </a>
   <p> Sign: Aries
+
   <p> Weaknesses:
     <p> Bad: Spoiled Milk
     <p> Good: Cannolis, Horchata
@@ -130,6 +131,13 @@ body {
 <!-- cute image div -->
 <div class = 'cutePicture'>
     <h1 id = 'memez'> FAVORITE MEMES </h1>
+  
+    <table> 
+      <tr>
+        <td> <img src = 'https://m.elitestatic.com/m/29f9bbd8221e6daa/student-athlete-hilarious-meme-tweet-4.jpg'> </td>
+        <td> <img src = 'https://media0ch-a.akamaihd.net/29/54/5997cbc43fda3388f653b4c302ab4c8f.jpg'> </td>
+      </tr>
+    </table>
 </div>
 
 
