--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -123,9 +123,7 @@ body {
   <p > Personality Type (16Personalities): <a href = 'https://www.16personalities.com/infp-personality'> Moderator </a>
   <p> Sign: Aries
 
-  <p> Weaknesses:
-    <p> Bad: Spoiled Milk
-    <p> Good: Cannolis, Horchata
+  <p> Weaknesses: (bad) Spoiled Milk ; (good) Cannolis, Horchata
 </div>
 
 <!-- cute image div -->
