--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -6,6 +6,9 @@
     body {
       background-color: rgb(255, 26, 255);
     }
+    #likes {
+      color: rgb(0, 148, 255);
+    }
   </style>
 </head>
   <body>
@@ -15,7 +18,7 @@
         I want to be a computer engineer/programmer when I grow up.
     </p>
     <h3> What I like (besides coding) </h3>
-     <p> Dancing<br>
+     <p id = "likes"> Dancing<br>
          Playing piano<br>
          Spanish<br>
          My school<br>
