--- a/profiles/Afrika.html
+++ b/profiles/Afrika.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <title> Profile: Afrika Hooks</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
       background-color: rgb(255, 26, 255);
+      font-family: 'Roboto', sans-serif;
     }
     #likes {
       color: rgb(0, 148, 255);
