--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -130,10 +130,11 @@ body {
 
 <!-- Lorem Ipsum text / INFO div -->
 <div class = 'loremIpsum' id = 'loremText'>
-  <p > Personality Type: <a href = 'https://www.16personalities.com/infp-personality'> Moderator </a>
   <p> Sign: Aries
-
-  <p> Weaknesses: (bad) Spoiled Milk ; (good) Cannolis, Horchata, Dogs
+  <p> House: Hufflepuff
+  <p> Weaknesses:
+    <br> Spoiled milk (bad)
+    <br> Cannolis, horchata, dogs, salsa (good)
 </div>
 
 <!-- Meme section : 6 rows (title w/ picture) & 2 columns -->
