--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -81,6 +81,9 @@ body {
   #loremText {
     font: 25px 'Times New Roman', serif;
   }
+  #indent {
+    text-indent: 5%;
+  }
 
 .memes {
       background-image: url("http://s6.favim.com/610/141026/background-chihuahua-dark-dog-Favim.com-2181678.jpg");
@@ -133,8 +136,8 @@ body {
   <p> Sign: Aries
   <p> House: Hufflepuff
   <p> Weaknesses:
-    <br> Spoiled milk (bad)
-    <br> Cannolis, horchata, dogs, salsa (good)
+    <br id = 'indent'> Spoiled milk (bad)
+    <br id = 'indent'> Cannolis, horchata, dogs, salsa (good)
 </div>
 
 <!-- Meme section : 6 rows (title w/ picture) & 2 columns -->
