--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -138,6 +138,7 @@ body {
   <p> Weaknesses:
     <br id = 'indent'> Spoiled milk (bad)
     <br id = 'indent'> Cannolis, horchata, dogs, salsa (good)
+  <p> Favorite colors: indigo, yellow, pink
 </div>
 
 <!-- Meme section : 6 rows (title w/ picture) & 2 columns -->
