--- a/profiles/paola.html
+++ b/profiles/paola.html
@@ -1,3 +1,4 @@
+
 <DOCTYPE! html>
   <head>
     <title> chihuahuas </title>
@@ -62,7 +63,7 @@ body {
     #dogAndDolphins {
       width: 30%;
       position: relative;
-      top: 130px;
+      top: 40px;
     }
 
 .loremIpsum {
@@ -136,8 +137,8 @@ body {
   <p> Sign: Aries
   <p> House: Hufflepuff
   <p> Weaknesses:
-    <br id = 'indent'> Spoiled milk (bad)
-    <br id = 'indent'> Cannolis, horchata, dogs, salsa (good)
+    <br id = 'indent'> Spoiled milk (ewww gross)
+    <br id = 'indent'> Cannolis, horchata, dogs, salsa (these are good)
   <p> Favorite colors: indigo, yellow, pink
 </div>
 
